Finished FM synthesis

--- a/bytebeat/makefile
+++ b/bytebeat/makefile
@@ -1,3 +1,15 @@
-all: synth graph
-	g++ -lm main.cpp -o synth
+BINS=synth graph
+SRCS=synth.cpp filters.cpp waves.cpp utility.cpp
+
+all: $(BINS)
+
+synth: $(SRCS)
+	g++ -lm $(SRCS) -o synth
+
+graph: graph.cpp
 	g++ graph.cpp -o graph
+
+.PHONY: clean
+
+clean:
+	rm $(BINS)
