Finished Subtractive synth

--- a/bytebeat/makefile
+++ b/bytebeat/makefile
@@ -4,7 +4,7 @@ SRCS=synth.cpp filters.cpp waves.cpp utility.cpp
 all: $(BINS)
 
 synth: $(SRCS)
-	g++ -lm $(SRCS) -o synth
+	g++ -lm $(SRCS) -lsfml-graphics -lsfml-window -lsfml-system -o synth
 
 graph: graph.cpp
 	g++ graph.cpp -o graph
